--- a/wigilie-firmowe/index.html
+++ b/wigilie-firmowe/index.html
@@ -12,16 +12,16 @@
     <meta http-equiv="Expires" content="0" />
 
     <title>
-      Zespół na Wigilie Firmowe 2025 Kraków - Lazy Swing Band | Profesjonalna
-      Oprawa Świąteczna
+      Zespół na Koncerty Świąteczne 2025 Kraków - Lazy Swing Band |
+      Profesjonalna Oprawa Świąteczna
     </title>
     <meta
       name="description"
-      content="Zespół jazzowy na wigilie firmowe 2025 Kraków - Lazy Swing Band. Profesjonalna oprawa muzyczna świątecznych imprez firmowych, koncerty świąteczne dla firm. Kolędy jazzowe, swing, repertuar Sinatry i Michaela Bublé. Kraków, Małopolska, cała Polska. Od 7000 PLN netto."
+      content="Zespół jazzowy na koncerty świąteczne 2025 Kraków - Lazy Swing Band. Profesjonalna oprawa muzyczna świątecznych wydarzeń, koncerty świąteczne dla firm. Kolędy jazzowe, swing, repertuar Sinatry i Michaela Bublé. Kraków, Małopolska, cała Polska. Od 7000 PLN netto."
     />
     <meta
       name="keywords"
-      content="zespół na wigilię firmową kraków 2025, wigilia firmowa zespół jazzowy, koncert świąteczny dla firm, oprawa muzyczna wydarzenia świąteczne, zespół na święta firmowe, świąteczna impreza firmowa kraków, zespół jazzowy wigilia małopolska, oprawa muzyczna wigilia firmowa, zespół na bankiet świąteczny, christmas party band kraków, zespół na grudniowe imprezy firmowe, sinatra bublé christmas kraków, cała polska"
+      content="zespół na koncert świąteczny kraków 2025, koncert świąteczny zespół jazzowy, koncert świąteczny dla firm, oprawa muzyczna wydarzenia świąteczne, zespół na święta firmowe, świąteczne imprezy firmowe kraków, zespół jazzowy koncerty małopolska, oprawa muzyczna event świąteczny, zespół na bankiet świąteczny, christmas party band kraków, zespół na grudniowe imprezy firmowe, sinatra bublé christmas kraków, cała polska"
     />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://lazyswingband.com/wigilie-firmowe/" />
@@ -30,11 +30,11 @@
     <!-- Open Graph -->
     <meta
       property="og:title"
-      content="Zespół na Wigilie Firmowe 2025 Kraków - Lazy Swing Band"
+      content="Zespół na Koncerty Świąteczne 2025 Kraków - Lazy Swing Band"
     />
     <meta
       property="og:description"
-      content="Profesjonalna oprawa muzyczna świątecznych imprez firmowych + koncerty świąteczne dla firm. Kolędy jazzowe, swing, repertuar Sinatry & Michaela Bublé. Kraków, Małopolska, cała Polska. Od 7000 PLN!"
+      content="Profesjonalna oprawa muzyczna świątecznych wydarzeń + koncerty świąteczne dla firm. Kolędy jazzowe, swing, repertuar Sinatry & Michaela Bublé. Kraków, Małopolska, cała Polska. Od 7000 PLN!"
     />
     <meta
       property="og:image"
@@ -53,11 +53,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Zespół na Wigilie Firmowe 2025 Kraków - Lazy Swing Band"
+      content="Zespół na Koncerty Świąteczne 2025 Kraków - Lazy Swing Band"
     />
     <meta
       name="twitter:description"
-      content="Profesjonalna oprawa muzyczna świątecznych imprez firmowych + koncerty świąteczne dla firm. Kolędy jazzowe, swing, repertuar Sinatry & Michaela Bublé. Kraków, Małopolska, cała Polska. Od 7000 PLN!"
+      content="Profesjonalna oprawa muzyczna świątecznych wydarzeń + koncerty świąteczne dla firm. Kolędy jazzowe, swing, repertuar Sinatry & Michaela Bublé. Kraków, Małopolska, cała Polska. Od 7000 PLN!"
     />
     <meta
       name="twitter:image"
@@ -183,7 +183,7 @@
             itemtype="https://schema.org/ListItem"
             aria-current="page"
           >
-            <span itemprop="name">Wigilie Firmowe 2025</span>
+            <span itemprop="name">Koncerty Świąteczne 2025</span>
             <meta itemprop="position" content="2" />
           </li>
         </ol>
@@ -194,7 +194,7 @@
         <div class="hero-badge" aria-label="Sezon 2025">
           <span>Sezon 2025</span>
         </div>
-        <h1 class="hero-title">Zespół na Wigilie Firmowe 2025</h1>
+        <h1 class="hero-title">Zespół na Koncerty Świąteczne 2025</h1>
         <p class="hero-subtitle">
           Profesjonalna oprawa muzyczna świątecznych imprez firmowych
         </p>
@@ -475,7 +475,7 @@
           <div class="video-container">
             <iframe
               src="https://www.youtube.com/embed/CLA-kpH-3Cs?si=Ri0D6il-7Z9h8nl1"
-              title="Lazy Swing Band - Świąteczny Jazz na Wigilie Firmowe 2025 Kraków - Profesjonalna Oprawa Muzyczna"
+              title="Lazy Swing Band - Świąteczny Jazz na Koncerty Świąteczne 2025 Kraków - Profesjonalna Oprawa Muzyczna"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               referrerpolicy="strict-origin-when-cross-origin"
@@ -487,7 +487,7 @@
           <div class="video-container">
             <iframe
               src="https://www.youtube.com/embed/0cFpaCVGfaY?si=NzqT-UspL04kk8BR"
-              title="Lazy Swing Band - Kolędy Jazzowe na Bankiety Świąteczne - Wigilie Firmowe Kraków Małopolska"
+              title="Lazy Swing Band - Kolędy Jazzowe na Bankiety Świąteczne - Koncerty Świąteczne Kraków Małopolska"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               referrerpolicy="strict-origin-when-cross-origin"
@@ -789,7 +789,7 @@
       <footer class="footer">
         <div class="footer-content">
           <p class="footer-brand">
-            <strong>Lazy Swing Band</strong> - Wigilie Firmowe Kraków 2025
+            <strong>Lazy Swing Band</strong> - Koncerty Świąteczne Kraków 2025
           </p>
           <p class="footer-description">
             Profesjonalna oprawa • Świąteczny jazz • Sinatra & Bublé • Kraków •
@@ -804,8 +804,8 @@
       {
         "@context": "https://schema.org",
         "@type": ["WebPage", "Service"],
-        "name": "Zespół na Wigilie Firmowe 2025 Kraków - Lazy Swing Band",
-        "description": "Profesjonalna oprawa muzyczna świątecznych imprez firmowych - wigilie, bankiety, koncerty. Kraków, Małopolska, cała Polska.",
+        "name": "Zespół na Koncerty Świąteczne 2025 Kraków - Lazy Swing Band",
+        "description": "Profesjonalna oprawa muzyczna świątecznych wydarzeń - koncerty świąteczne, bankiety, wydarzenia. Kraków, Małopolska, cała Polska.",
         "url": "https://lazyswingband.com/wigilie-firmowe/",
         "provider": {
           "@type": "MusicGroup",
@@ -890,7 +890,7 @@
         "serviceType": "Oprawa muzyczna wydarzeń firmowych",
         "hasOfferCatalog": {
           "@type": "OfferCatalog",
-          "name": "Usługi na Wigilie Firmowe",
+          "name": "Usługi na Koncerty Świąteczne",
           "itemListElement": [
             {
               "@type": "Offer",
